# teirubrics

./: README.md  README.rst  pyproject.toml
teirubrics/: export.py  main.py  tei.py
teirubrics/templates/: page.html  rubric.html  table.html
