[project]
name = "teirubrics"
version = "0.1.0"
description = "Collates rubrics from multiple TEI XML files and creates static HTML reports"
authors = [
    {name = "Robert Turnbull",email = "robert.turnbull@unimelb.edu.au"}
]
license = {text = "Apache-2.0"}
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "numpy (<2)",
    "jinja2 (>=3.1.6,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
teirubrics = "teirubrics.main:app"